Changed forms a bit

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -25,6 +25,7 @@
               <button type="button" class="btn btn-outline-primary btn-block">Login</button>
             </div>
           </form>
+          <small class="text-muted">Need to Join? <a [routerLink]="['/signup']">Sign Up Here</a></small>
         </div>
         <div class="col-md-6 vertical-left-divider">
           <h3 class="text-center text-info">Or Login With</h3><br/><br/>
