--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -5,10 +5,10 @@
   <a class="navbar-brand" [routerLink]="['']">Job Listing</a>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
     <div class="navbar-nav nav-padding space-around">
-      <a class="nav-item nav-link" href="#">Find Jobs </a>
-      <a class="nav-item nav-link" href="#">Recruit Talent</a>
-      <a class="nav-item nav-link" href="#">About Us</a>
-      <a class="nav-item nav-link" href="#">Pricing</a>
+      <a class="nav-item nav-link" href="javascript:void(0)">Find Jobs </a>
+      <a class="nav-item nav-link" href="javascript:void(0)">Recruit Talent</a>
+      <a class="nav-item nav-link" href="javascript:void(0)">About Us</a>
+      <a class="nav-item nav-link" href="javascript:void(0)">Pricing</a>
       <form class="form-inline">
         <input class="form-control mr-sm-2" type="text" placeholder="Search">
         <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
